# 21-Days-Change-Challenge

./: README.md  prompt.txt
Day_1/: Python Practice Questions for AI Engineering, Data.md  README.md  main.py  pyproject.toml  question_1.py  question_10.py  question_11.py  question_12.py  question_13.py  question_14.py  question_15.py  question_16.py  question_17.py  question_18.py  question_19.py  question_2.py  question_20.py  question_21.py  question_22.py  question_23.py  question_24.py  question_25.py  question_3.py  question_4.py  question_5.py  question_6.py  question_7.py  question_8.py  question_9.py
Day_2/: Python Practice Questions for AI Engineering, Data.md  README.md  pyproject.toml  question_1.py  question_10.py  question_11.py  question_12.py  question_13.py  question_14.py  question_15.py  question_16.py  question_17.py  question_18.py  question_19.py  question_2.py  question_20.py  question_21.py  question_23.py  question_24.py  question_25.py  question_3.py  question_4.py  question_5.py  question_6.py  question_7.py  question_8.py  question_9.py
Day_3/: Python_Questions.md  README.md  pyproject.toml  question1.py  question10.py  question2.py  question3.py  question4.py  question5.py  question6.py  question7.py  question8.py  question9.py
Day_4/: Python Practice Questions for AI Engineering, Data.md  README.md  pyproject.toml  question1.py  question10.py  question2.py  question3.py  question4.py  question5.py  question6.py  question7.py  question8.py  question9.py
Day_5/: Python Practice Questions for AI Engineering, Data.md  README.md  (+11 more)
(+51 files in other folders)
