[project]
name = "day1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.119.1",
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "scipy>=1.16.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.38.0",
]
