[project]
name = "day-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.120.0",
    "ipykernel>=7.0.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pydantic>=2.12.3",
    "uvicorn>=0.38.0",
]
